syntax = "proto3";

option go_package = "auth-service/pkg/pb";

service AuthService {
  rpc RegisterClient (RegisterClientRequest) returns (RegisterResponse);
  rpc RegisterDriver (RegisterDriverRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message RegisterResponse {
  int64 id = 1;
  string message = 2;
}

message RegisterClientRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
}

message RegisterDriverRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
  string car_model = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string role = 5;
  string car_model = 6;
}